# HDCtutorial-numpy

./: HDCtutorial-numpy.ipynb  README.md  pyproject.toml  tuto-numpy.ipynb
